--- a/plays.css
+++ b/plays.css
@@ -6,6 +6,11 @@
     font-family: 'Eagle Lake', cursive;
 }
 
+header .logo a {
+    color: var(--main-color);
+    text-decoration: none;
+}
+
 #carouselProducts {
     min-height: 500px;
 }
