--- a/css/index.css
+++ b/css/index.css
@@ -21,7 +21,7 @@ body {
 	cursor: url(../img/arrow.cur), auto;
 }
 
-body a:hover {
+a:hover {
     cursor: url(../img/finger.cur), pointer;
 }
 
@@ -136,12 +136,6 @@ main .joinus h4 {
     text-shadow: black 0 0 15px;
     font-family: 'Eagle Lake', cursive;
     font-size: 2.5rem;
-}
-
-main .contactus {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 5px;
 }
 
 .vy h1{
